--- a/web_server/base.html
+++ b/web_server/base.html
@@ -220,7 +220,7 @@
         background-color: #CEC;
     }
 
-    .replicas td.available {
+    td.available {
         background-color: #AFA;
     }
 
@@ -228,11 +228,11 @@
         background-color: #FF8;
     }
 
-    .rses td.available {
+    td.available {
         background-color: #AFA;        
     }
     
-    .rses td.unavailable {
+    td.unavailable {
         background-color: #FAA;        
     }
     
