--- a/web_server/base.html
+++ b/web_server/base.html
@@ -208,23 +208,19 @@
         padding: 0;
     }
 
-    .replicas td.failed {
+    td.failed {
         background-color: #FAA;
     }
 
-    .replicas td.done {
+    td.done {
         background-color: #DDE;
     }
 
-    .replicas td.ready {
-        background-color: #CEC;
+    td.ready {
+        background-color: #CCE;
     }
 
-    td.available {
-        background-color: #AFA;
-    }
-
-    .replicas td.reserved {
+    td.reserved {
         background-color: #FF8;
     }
 
