Derived handle states

--- a/web_server/base.html
+++ b/web_server/base.html
@@ -208,24 +208,30 @@
         padding: 0;
     }
 
+
+
     td.failed {
-        background-color: #FAA;
+        background-color: #F44;
     }
 
     td.done {
-        background-color: #DDE;
+        background-color: #88F;
     }
 
-    td.ready {
-        background-color: #CCE;
+    td.initial {
+        background-color: #DDD;
     }
 
     td.reserved {
-        background-color: #FF8;
+        background-color: #FD8;
     }
 
+    td.found {
+        background-color: #ACA;        
+    }
+    
     td.available {
-        background-color: #AFA;        
+        background-color: #8F8;        
     }
     
     td.unavailable {
