--- a/web_server/projects.html
+++ b/web_server/projects.html
@@ -8,11 +8,11 @@
 
     var FillColors={
         "initial": "#EEE", 
-        "found": "#CCF", 
-        "available": "#CFF", 
-        "failed": "#FCC", 
-        "reserved": "#FFC",
-        "done": "#CFC"
+        "found": "#AAF", 
+        "available": "#AFF", 
+        "failed": "#FAA", 
+        "reserved": "#FFA",
+        "done": "#AFA"
     };
     
     var StrokeColors = FillColors;
