Tested proximity map

--- a/web_server/base.html
+++ b/web_server/base.html
@@ -283,6 +283,7 @@
     	<tr>
     	    <td><a class=button href="{{GLOBAL_AppTopPath}}/P/projects">projects</a></td>
     	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/index">RSEs</a></td>
+    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/proximity_map">CPU/RSE proximity map</a></td>
             <td style="width:100%"></td>
     		<td>
                         {% if GLOBAL_User %}
