--- a/web_server/base.html
+++ b/web_server/base.html
@@ -208,7 +208,9 @@
         padding: 0;
     }
 
-
+    .disabled td {
+        color: #AAA;
+    }
 
     .failed {
         background-color: #F88;
