--- a/web_server/rses.html
+++ b/web_server/rses.html
@@ -13,14 +13,17 @@
 <table class="data rses">
 	<tr>
 		<th>Name</th>
+        <th>Enabled</th>
         <th>Type</th>
 		<th>Available</th>
 		<th>Description</th>
 	</tr>
     {% for rse in rses %}
-        <tr>
-            {% set status = 'available' if rse.Available else 'unavailable' %}
+        {% set status = 'available' if rse.Available else 'unavailable' %}
+        {% set enabled = 'enabled' if rse.Enabled else 'disabled' %}
+        <tr class="{{enabled}}">
             <td><a href="./rse?name={{rse.Name}}">{{rse.Name}}</a></td>
+            <td>{{enabled}}</td>
             <td>{{'tape' if rse.Tape else 'disk'}}</td>
             <td class="{{status}}">{{status}}</td>
             <td>{{rse.Description}}</td>
