--- a/web_server/proximity_map.html
+++ b/web_server/proximity_map.html
@@ -15,7 +15,7 @@
 
 <table class="data">
     <tr>
-        <th rowspan=2>CPU Site</th><th colspan="{{proximity_map.rses()|length}}">RSE</th>
+        <th rowspan=2>CPU Site</th><th colspan="{{proximity_map.rses()|length}}">Enabled RSEs</th>
     </tr>
     <tr>
         {% for rse in proximity_map.rses() %}
