--- a/web_server/project.html
+++ b/web_server/project.html
@@ -16,6 +16,7 @@
     </tr>
 
     <tr>    <th>Status</th>             <td><span class="{{project.State}}" style="padding: 3px">{{project.State}}</span></td> </tr>
+    <tr>    <th>Query</th>              <td><pre>{{project.Query or ""}}</pre></td> </tr>
     <tr>    <th>Attributes</th>         <td class="nopadding">
             {% if project.Attributes|length %}
                 <table class="placement attributes dense">
