--- a/web_server/base.html
+++ b/web_server/base.html
@@ -268,6 +268,7 @@
 <!--  Globals 
     APP_URL: "{{APP_URL}}"
     MY_PATH: "{{MY_PATH}}"
+    GLOBAL_PathPrefix: "{{GLOBAL_PathPrefix}}"
     GLOBAL_AppTopPath: "{{GLOBAL_AppTopPath}}"
     GLOBAL_AppDirPath: "{{GLOBAL_AppDirPath}}"
     GLOBAL_ImagesPath: "{{GLOBAL_ImagesPath}}"
@@ -283,15 +284,15 @@
 <div id="main_menu">
 	<table class="placement link_menu" width="100%">
     	<tr>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/P/projects">projects</a></td>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/index">RSEs</a></td>
-    	    <td><a class=button href="{{GLOBAL_AppTopPath}}/R/proximity_map">CPU/RSE proximity map</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/P/projects">projects</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/index">RSEs</a></td>
+    	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/proximity_map">CPU/RSE proximity map</a></td>
             <td style="width:100%"></td>
     		<td>
                         {% if GLOBAL_User %}
-                            <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_AppTopPath}}/A/logout?redirect={{GLOBAL_AppTopPath}}/index">log out</a>
+                            <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_PathPrefix}}/A/logout?redirect={{GLOBAL_PathPrefix}}}/index">log out</a>
                         {% else %}
-                            <a class=button href="{{GLOBAL_AppTopPath}}/A/login?redirect={{GLOBAL_AppTopPath}}/index">log in</a>
+                            <a class=button href="{{GLOBAL_PathPrefix}}/A/login?redirect={{GLOBAL_PathPrefix}}/index">log in</a>
                         {% endif %}
     		</td>
     	</tr>
