--- a/web_server/project.html
+++ b/web_server/project.html
@@ -7,7 +7,7 @@
 <table class="form">
     <tr>    <th>Project ID</th>         <td>{{project.ID}}</td> </tr>
     <tr>    <th>User</th>               <td>{{project.Owner}}</td> </tr>
-    <tr>    <th>Created</th>            <td>{{project.CreatedTimestamp}}</td> </tr>
+    <tr>    <th>Created</th>            <td>{{project.CreatedTimestamp|as_dt_utc}}</td> </tr>
     <tr>    <th>Ended</th>              
             <td>{% if not project.EndTimestamp is none %}
                     {{project.EndTimestamp}}
