--- a/web_server/base.html
+++ b/web_server/base.html
@@ -288,6 +288,7 @@
     	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/index">RSEs</a></td>
     	    <td><a class=button href="{{GLOBAL_PathPrefix}}/R/proximity_map">CPU/RSE proximity map</a></td>
             <td style="width:100%"></td>
+            <td><span style="color:#AAA; padding-right: 10px"><i>All times in UTC</i></span></td>
     		<td>
                         {% if GLOBAL_User %}
                             <span style="color:#AAA">logged in as {{GLOBAL_User.Name or ""}}&nbsp;{{GLOBAL_User.Username}}&nbsp;</span><a class=button  href="{{GLOBAL_PathPrefix}}/A/logout?redirect={{GLOBAL_PathPrefix}}}/index">log out</a>
