--- a/web_server/project.html
+++ b/web_server/project.html
@@ -130,7 +130,7 @@
                                     {% for record in combined_log[did] %}
                                         <tr>
                                             <td>{{record.T|as_dt_utc}}</td>
-                                            <td>{{record.Type}}</td>
+                                            <td class="{{record.Type}}">{{record.Type}}</td>
                                             <td>{% for name, value in record.Data.items()|sort -%}
                                                     {{name}}={{value}}&nbsp;
                                                 {%- endfor %}
